--- a/index.html
+++ b/index.html
@@ -8,150 +8,134 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- CRT -->
-    <div class="crt-monitor">
-        <!-- Navbar -->
-        <nav class="navbar">
-            <div class="nav-logo">&lt;/CODE&gt;</div>
+    <!-- Navigation -->
+    <nav class="navbar">
+        <div class="nav-container">
+            <div class="nav-logo">Portfolio</div>
             <ul class="nav-links">
-                <li><a href="#home">HOME</a></li>
-                <li><a href="#about">ABOUT</a></li>
-                <li><a href="#skills">SKILLS</a></li>
-                <li><a href="#experience">LANGUAGES</a></li>
-                <li><a href="#projects">PROJECTS</a></li>
-                <li><a href="#contact">CONTACT</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#experience">Languages</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
-        </nav>
+        </div>
+    </nav>
 
-        <!-- MJ Section -->
-        <section id="home" class="hero">
-            <div class="hero-content">
-                <div class="profile-container">
-                    <img id="profileImage" src="img/Profile.jpg" alt="Profile" class="profile-image" draggable="false">
+    <!-- Hero Section -->
+    <section id="home" class="hero">
+        <div class="profile-container">
+            <img id="profileImage" src="img/Profile.jpg" alt="Profile" class="profile-image" draggable="false">
+        </div>
+        <h1 class="hero-name">Mar Joseph M. Huelgas</h1>
+        <p class="hero-tagline">IT Student | Developer</p>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="section">
+        <h2 class="section-title">About Me</h2>
+        <div class="about-content">
+            <p class="about-text">
+                I am a passionate learner who is open to changes, loves to tackle challenges, and to also learn new things.
+                I strive to learn new things while also improving my current skillsets. I'm also open to meet and work with other people
+                to discover new things. I also like to help others as much as my skills can do to acquire experiences while also discovering new challenges.
+            </p>
+            <div class="about-info">
+                <div class="info-item">
+                    <span class="info-label">Location</span>
+                    <span class="info-value">Talibong Grande, Mina, Iloilo</span>
                 </div>
-                <h1 class="hero-name">Mar Joseph M. Huelgas</h1>
-                <p class="hero-tagline">IT Student | Developer</p>
-            </div>
-        </section>
-
-        <!-- About Section -->
-        <section id="about" class="section">
-            <h2 class="section-title">ABOUT ME</h2>
-            <div class="section-divider"></div>
-
-            <div class="about-content">
-                <p class="about-text">
-                    I am a passionate learner who is open to changes, loves to tackle challenges, and to also learn new things.
-                    I strive to learn new things while also improving my current skillsets. I'm also open to meet and work with other people
-                    to discover new things. I also like to help others as much as my skills can do to acquire experiences while also discovering new challenges.
-                </p>
-
-                <div class="about-info">
-                    <div class="info-item">
-                        <span class="info-label">Location:</span>
-                        <span class="info-value">Talibong Grande, Mina, Iloilo</span>
-                    </div>
-                    <br>
-                    <br>
-                    <div class="info-item">
-                        <span class="info-label">Education:</span>
-                        <span class="info-value">BSIT</span>
-                    </div>
-                    <br>
-                    <br>
-                    <div class="info-item">
-                        <span class="info-label">Email:</span>
-                        <span class="info-value">mrphd321@gmail.com</span>
-                    </div>
+                <div class="info-item">
+                    <span class="info-label">Education</span>
+                    <span class="info-value">BSIT</span>
+                </div>
+                <div class="info-item">
+                    <span class="info-label">Email</span>
+                    <span class="info-value">mrphd321@gmail.com</span>
                 </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <!-- Skills Section -->
-        <section id="skills" class="section">
-            <h2 class="section-title">SKILLS</h2>
-            <div class="section-divider"></div>
-
-            <div class="experience-grid">
-                <div class="experience-category">
-                    <h3 class="category-title">Web Development</h3>
-                    <ul class="skill-list">
-                        <li>HTML5 / CSS3</li>
-                        <li>JavaScript</li>
-                        <li>React.js</li>
-                        <li>Node.js</li>
-                    </ul>
-                </div>
-
-                <div class="experience-category">
-                    <h3 class="category-title">Mobile Development</h3>
-                    <ul class="skill-list">
-                        <li>Flutter</li>
-                        <li>Firebase</li>
-                        <li>UI/UX Design</li>
-                    </ul>
-                </div>
-
-                <div class="experience-category">
-                    <h3 class="category-title">Tools & Platforms</h3>
-                    <ul class="skill-list">
-                        <li>Git / GitHub</li>
-                        <li>Visual Studio Code</li>
-                        <li>Figma</li>
-                        <li>Android Studio</li>
-                    </ul>
-                </div>
+    <!-- Skills Section -->
+    <section id="skills" class="section">
+        <h2 class="section-title">Skills</h2>
+        <div class="skills-grid">
+            <div class="skill-category">
+                <h3 class="category-title">Web Development</h3>
+                <ul class="skill-list">
+                    <li>HTML5 / CSS3</li>
+                    <li>JavaScript</li>
+                    <li>React.js</li>
+                    <li>Node.js</li>
+                </ul>
             </div>
-        </section>
-
-        <!-- Programming Languages -->
-        <section id="experience" class="section">
-            <h2 class="section-title">PROGRAMMING LANGUAGES</h2>
-            <div class="section-divider"></div>
-
-            <div class="experience-grid">
-                <div class="experience-category">
-                    <h3 class="category-title">Main Languages</h3>
-                    <ul class="skill-list">
-                        <li>Java</li>
-                        <li>Python</li>
-                        <li>C++</li>
-                        <li>Dart</li>
-                    </ul>
-                </div>
-
-                <div class="experience-category">
-                    <h3 class="category-title">Web Technologies</h3>
-                    <ul class="skill-list">
-                        <li>HTML / CSS</li>
-                        <li>REACTJS</li>
-                    </ul>
-                </div>
+            <div class="skill-category">
+                <h3 class="category-title">Mobile Development</h3>
+                <ul class="skill-list">
+                    <li>Flutter</li>
+                    <li>Firebase</li>
+                    <li>UI/UX Design</li>
+                </ul>
             </div>
-        </section>
-
-        <!-- Projects Section -->
-        <section id="projects" class="section">
-            <h2 class="section-title">PROJECTS</h2>
-            <div class="section-divider"></div>
-            <div class="projects-grid" id="projectsContainer">
+            <div class="skill-category">
+                <h3 class="category-title">Tools & Platforms</h3>
+                <ul class="skill-list">
+                    <li>Git / GitHub</li>
+                    <li>Visual Studio Code</li>
+                    <li>Figma</li>
+                    <li>Android Studio</li>
+                </ul>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <!-- Contacts -->
-        <section id="contact" class="section">
-            <h2 class="section-title">CONTACT</h2>
-            <div class="section-divider"></div>
-            <div class="contact-content">
-                <p class="contact-text">Feel free to reach out for more inquiries!</p>
-                <div class="contact-links">
-                    <a href="https://www.facebook.com/share/1NMjCWffi9/" class="contact-link">Facebook</a>
-                    <a href="https://github.com/MJ1123432" target="_blank" class="contact-link">GitHub</a>
-                    <a href="www.linkedin.com/in/mar-joseph-huelgas-b01a08357" target="_blank" class="contact-link">LinkedIn</a>
-                </div>
+    <!-- Programming Languages -->
+    <section id="experience" class="section">
+        <h2 class="section-title">Programming Languages</h2>
+        <div class="skills-grid">
+            <div class="skill-category">
+                <h3 class="category-title">Main Languages</h3>
+                <ul class="skill-list">
+                    <li>Java</li>
+                    <li>Python</li>
+                    <li>C++</li>
+                    <li>Dart</li>
+                </ul>
             </div>
-        </section>
-    </div>
+            <div class="skill-category">
+                <h3 class="category-title">Web Technologies</h3>
+                <ul class="skill-list">
+                    <li>HTML / CSS</li>
+                    <li>REACTJS</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects" class="section">
+        <h2 class="section-title">Projects</h2>
+        <div class="projects-grid" id="projectsContainer"></div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="section">
+        <h2 class="section-title">Contact</h2>
+        <div class="contact-content">
+            <p class="contact-text">Feel free to reach out for more inquiries!</p>
+            <div class="contact-links">
+                <a href="https://www.facebook.com/share/1NMjCWffi9/" class="contact-link">Facebook</a>
+                <a href="https://github.com/MJ1123432" target="_blank" class="contact-link">GitHub</a>
+                <a href="www.linkedin.com/in/mar-joseph-huelgas-b01a08357" target="_blank" class="contact-link">LinkedIn</a>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>© 2025 Mar Joseph M. Huelgas. All rights reserved.</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
