--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Mar Joseph M. Huelgas Portfolio</title>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https:; script-src 'self'; style-src 'self' 'unsafe-inline'; object-src 'none';">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="favicon.png">
+
 </head>
 <body>
     <!-- Navigation -->
