--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Mar Joseph M. Huelgas Portfolio</title>
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' https:; script-src 'self'; style-src 'self' 'unsafe-inline'; object-src 'none';">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="favicon1.png">
 
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar">
+    <nav class="navbar">s
         <div class="nav-container">
             <div class="nav-logo">Portfolio</div>
             <ul class="nav-links">
