--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar">s
+    <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">Portfolio</div>
             <ul class="nav-links">
