--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="hero-image">
           <img
-            src="img/profile.jpg"
+            src="img/Profile.jpg"
             alt="Mar Joseph M. Huelgas"
             class="profile-img-hero"
           />
